@@ -1,10 +1,18 @@
 ===========================================================================
-$NetBSD: MESSAGE,v 1.2 2002/09/24 12:30:51 wiz Exp $
+$NetBSD: MESSAGE,v 1.3 2002/11/19 23:22:40 jlam Exp $
 
 In order to enable mod_perl in your Apache installation, you need to add
 the following to your httpd.conf file:
 
-  LoadModule perl_module lib/httpd/mod_perl.so
+	LoadModule perl_module lib/httpd/mod_perl.so
+
+To enable the mod_perl-1.0 compatibility API, you will also need:
+
+	PerlModule Apache::compat
+
+Please also refer to the documentation in:
+
+	${PREFIX}/share/doc/html/mod_perl/user/compat
 
 If switching to/from a server with and without mod_perl enabled, you
 should NOT use "apachectl restart" - instead, fully stop and then start
